--- a/templates/wed.html
+++ b/templates/wed.html
@@ -484,8 +484,9 @@
                                     <span>Engineer</span>
                                 </div>
                                 <div class="detail-item">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    <span>Boston, MA</span>
+                                    <i class="fas fa-hand-pointer"></i>
+
+                                    <span>"Click here</span>
                                 </div>
                             </div>
                         </div>
@@ -507,8 +508,9 @@
                                     <span>Professor</span>
                                 </div>
                                 <div class="detail-item">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    <span>Seattle, WA</span>
+                                   <i class="fas fa-hand-pointer"></i>
+
+                                    <span>"Click here</span>
                                 </div>
                             </div>
                         </div>
