--- a/templates/wed.html
+++ b/templates/wed.html
@@ -41,7 +41,7 @@
             right: 0;
             bottom: 0;
             background: linear-gradient(45deg, 
-                #ff69b4, #ff8dc7, #ffd700, #00ffff, #ff1493);
+                #ff69b4,rgb(255, 141, 200),rgba(255, 217, 0, 1),rgb(0, 255, 255), #ff1493);
             background-size: 400% 400%;
             animation: gradientBG 15s ease infinite;
             z-index: -1;
@@ -508,7 +508,7 @@
                                     <span>Professor</span>
                                 </div>
                                 <div class="detail-item">
-                                   <i class="fas fa-hand-pointer"></i>
+                                    <i class="fas fa-hand-pointer"></i>
 
                                     <span>"Click here</span>
                                 </div>
@@ -830,9 +830,9 @@
                 #AkhilaAndRakesh2025
             </p>
             <div class="social-links mt-3">
-                <a href="#" class="mx-2 text-dark"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#" class="mx-2 text-dark"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#" class="mx-2 text-dark"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://www.instagram.com/dhakarroyvinnu?igsh=dGFmeTkweWE3bXJi" class="mx-2 text-dark" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://www.facebook.com/share/18cC7FzKfL/" class="mx-2 text-dark"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="https://x.com/DHAKARRAIVINNU?t=uSizhogyiWGZ1XFHATvteQ&s=08" class="mx-2 text-dark"><i class="fab fa-twitter fa-2x"></i></a>
             </div>
         </div>
     </footer>
