--- a/templates/wed.html
+++ b/templates/wed.html
@@ -551,7 +551,7 @@
                                     <ul>
                                         <li>Travelling</li>
                                         <li>Food lover</li>
-                                        <li>Classical Music</li>
+                                        <li>Movie lover</li>
                                     </ul>
                                 </div>
                             </div>
@@ -615,19 +615,19 @@
                         <h3 style="font-family: 'Montserrat', sans-serif; color: var(--accent-2);">
                             Wedding Ceremony
                         </h3>
-                        <p>24-02-2025 , 10:30 AM - "Monday" </p>
-                        <p>Sri Surya convention hall</p>
-                        <p>Tangellamudi,Eluru </p>
+                        <p>24-02-2025 ,  "Monday" </p>
+                        <p>Morning 10:30 AM </p>
+                        <p>at Venue </p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="event-card">
+                    <div class="event-card" onclick="window.open('https://maps.app.goo.gl/Vxnhmua3v2Gi336r6', '_blank')" style="cursor: pointer;">
                         <i class="fas fa-glass-cheers event-icon"></i>
                         <h3 style="font-family: 'Montserrat', sans-serif; color: var(--accent-2);">
-                            Reception
+                            Venue
                         </h3>
                         <p></p>
-                        <p>UPDATING SOON</p>
+                        <p>Sri Surya convention hall , mammaya gari thota, Tangellamudi,Eluru </p>
                         <p></p>
                     </div>
                 </div>
