--- a/templates/wed.html
+++ b/templates/wed.html
@@ -627,7 +627,7 @@
                             Venue
                         </h3>
                         <p></p>
-                        <p>Sri Surya convention hall , mammaya gari thota, Tangellamudi,Eluru </p>
+                        <p>Sri Surya convention hall , mammaya gari thota, Tangellamudi,Eluru  <br> 👆 Click here  </p>
                         <p></p>
                     </div>
                 </div>
