--- a/templates/wed.html
+++ b/templates/wed.html
@@ -467,10 +467,14 @@
         <div class="floating-hearts"></div>
         <div class="container">
             <div class="header-content">
+                 
+                <p class="subtitle" style="color: var(--accent-2); font-family: 'Montserrat', sans-serif;">
+                    PEETHALA'S WEDDING INVITATION ❤️
+                </p>
                 <h1 class="names">Rakesh & Akhila</h1>
                 <p class="date">FEBRUARY 24, 2025</p>
                 <p class="subtitle" style="color: var(--accent-2); font-family: 'Montserrat', sans-serif;">
-                    Join us in celebrating our Wedding festival ❤️
+                    Join us in celebrating our Wedding festival 🎉
                 </p>
             </div>
         </div>
